Fix navigation links: convert absolute paths to relative paths for GitHub Pages compatibility

--- a/pages/index-2.html
+++ b/pages/index-2.html
@@ -16,7 +16,7 @@
         <a href="#">
           <img
             class="h-12"
-            src="/public/Logo_galeries_lafayette-removebg-preview 1.png"
+            src="../public/Logo_galeries_lafayette-removebg-preview 1.png"
             alt="Logo"
           />
         </a>
@@ -38,14 +38,14 @@
             placeholder="Marques, catégories, articles..."
           />
           <button type="submit">
-            <img class="ml-2 h-5" src="/public/search.png" alt="Rechercher" />
+            <img class="ml-2 h-5" src="../public/search.png" alt="Rechercher" />
           </button>
         </form>
         <button aria-label="Profil">
-          <img class="h-6" src="/public/profile.png" alt="Profil" />
+          <img class="h-6" src="../public/profile.png" alt="Profil" />
         </button>
         <button aria-label="Panier">
-          <img class="h-6" src="/public/cart.png" alt="Panier" />
+          <img class="h-6" src="../public/cart.png" alt="Panier" />
         </button>
       </aside>
     </header>
@@ -63,12 +63,12 @@
             >Entrer votre code postal</span
           >
           <a
-            href="index.html"
+            href="../index.html"
             class="absolute top-4.5 right-2 flex h-8 w-8 items-center justify-center rounded-full bg-black"
           >
             <img
               class="h-3"
-              src="/public/cross-white-icon.webp"
+              src="../public/cross-white-icon.webp"
               alt="Rechercher"
             />
           </a>
@@ -86,7 +86,7 @@
           <article class="border-border mb-8 w-full max-w-2xl border p-6 transition-shadow cursor-pointer hover:shadow-lg">
             <header class="mb-2 flex items-center">
               <img
-            src="/public/Logo_galeries_lafayette-removebg-preview 1.png"
+            src="../public/Logo_galeries_lafayette-removebg-preview 1.png"
             alt="Logo"
             class="mr-4 h-10"
               />
@@ -102,7 +102,7 @@
               <li class="flex items-center gap-2">
             <span class="text-ele-3 text-2xl">
               <img
-                src="/public/gui-menu-check.svg"
+                src="../public/gui-menu-check.svg"
                 alt="check"
                 class="inline h-6 w-6"
               />
@@ -112,7 +112,7 @@
               <li class="flex items-center gap-2">
             <span class="text-ele-3 text-2xl">
               <img
-                src="/public/gui-menu-check.svg"
+                src="../public/gui-menu-check.svg"
                 alt="check"
                 class="inline h-6 w-6"
               />
@@ -125,7 +125,7 @@
         <article class="border-border mb-8 w-full max-w-2xl border p-6">
           <header class="mb-2 flex items-center">
             <img
-              src="/public/Logo_galeries_lafayette-removebg-preview 1.png"
+              src="../public/Logo_galeries_lafayette-removebg-preview 1.png"
               alt="Logo"
               class="mr-4 h-10"
             />
@@ -141,7 +141,7 @@
             <li class="flex items-center gap-2">
               <span class="text-ele-3 text-2xl">
                 <img
-                  src="/public/gui-menu-check.svg"
+                  src="../public/gui-menu-check.svg"
                   alt="check"
                   class="inline h-6 w-6"
                 />
@@ -151,7 +151,7 @@
             <li class="flex items-center gap-2">
               <span class="text-ele-3 text-2xl">
                 <img
-                  src="/public/gui-menu-check.svg"
+                  src="../public/gui-menu-check.svg"
                   alt="check"
                   class="inline h-6 w-6"
                 />
