--- a/pages/index-4-Femme.html
+++ b/pages/index-4-Femme.html
@@ -10,8 +10,8 @@
   <body class="flex min-h-screen flex-col items-center">
     <header class="flex w-full flex-row items-center justify-between px-8 py-4">
       <section class="flex items-center">
-        <a href="/pages/index-3.html">
-          <img class="h-12" src="/public/Logo_galeries_lafayette-removebg-preview 1.png" alt="Logo" />
+        <a href="./index-3.html">
+          <img class="h-12" src="../public/Logo_galeries_lafayette-removebg-preview 1.png" alt="Logo" />
         </a>
         <nav class="ml-8">
           <ul class="flex flex-row space-x-6">
@@ -25,35 +25,35 @@
         <form class="bg-primary border-sub flex items-center rounded border px-2 py-1">
           <input class="bg-primary font-roboto max-w-fit outline-none" type="text" placeholder="Marques, catégories, articles..." />
           <button type="submit">
-            <img class="ml-2 h-5" src="/public/search.png" alt="Rechercher" />
+            <img class="ml-2 h-5" src="../public/search.png" alt="Rechercher" />
           </button>
         </form>
         <button aria-label="Profil">
-          <img class="h-6" src="/public/profile.png" alt="Profil" />
+          <img class="h-6" src="../public/profile.png" alt="Profil" />
         </button>
         <button aria-label="Panier">
-          <img class="h-6" src="/public/cart.png" alt="Panier" />
+          <img class="h-6" src="../public/cart.png" alt="Panier" />
         </button>
       </aside>
     </header>
     <main class="mx-auto mt-12 flex w-full max-w-7xl flex-col items-center">
       <nav class="w-full mb-8 flex items-center">
-        <a href="/pages/index-3.html" class="flex items-center text-black font-roboto text-lg hover:text-sub">
+        <a href="./index-3.html" class="flex items-center text-black font-roboto text-lg hover:text-sub">
           <span class="text-2xl mr-2">&#8592;</span> Retour
         </a>
       </nav>
       <h1 class="font-title text-6xl font-bold mb-12">VÊTEMENTS Femme</h1>
       <section class="flex gap-6 mb-12">
-        <a href="/pages/index-6-Femme.html">
+        <a href="./index-6-Femme.html">
         <button class="border border-border rounded-full px-6 py-2 font-roboto text-lg hover:text-sub hover:cursor-pointer">ACCESSOIRES</button>
         </a>
-        <a href="/pages/index-5-Femme.html">
+        <a href="./index-5-Femme.html">
         <button class="border border-border rounded-full px-6 py-2 font-roboto text-lg hover:text-sub hover:cursor-pointer">CHAUSSURES</button>
         </a>
       </section>
       <section class="w-full grid grid-cols-2 md:grid-cols-4 gap-8 mb-12">
         <figure class="flex flex-col items-center">
-          <img src="/public/Ami-gris.svg" alt="Ami Paris gris" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="../public/Ami-gris.svg" alt="Ami Paris gris" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="mt-4 text-left w-full pl-5 ">
             <h2 class="font-title text-2xl mb-2 ">AMI PARIS</h2>
             <p class="font-roboto text-sub mb-2">Pull Col Rond Ami De Coeur En Laine</p>
@@ -61,7 +61,7 @@
           </figcaption>
         </figure>
         <figure class="flex flex-col items-center">
-          <img src="/public/Ralph.svg" alt="Polo Ralph Lauren" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="../public/Ralph.svg" alt="Polo Ralph Lauren" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="mt-4 text-left w-full pl-5">
             <h2 class="font-title text-2xl mb-2">POLO RALPH LAUREN</h2>
             <p class="font-roboto text-sub mb-2">Pull Torsadé en laine et cachemire</p>
@@ -69,7 +69,7 @@
           </figcaption>
         </figure>
         <figure class="flex flex-col items-center">
-          <img src="/public/hoodie-car.svg" alt="Carhartt" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="../public/hoodie-car.svg" alt="Carhartt" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="mt-4 text-left w-full pl-5">
             <h2 class="font-title text-2xl mb-2 ">CARHARTT</h2>
             <p class="font-roboto text-sub mb-2">sweat en coton</p>
@@ -77,7 +77,7 @@
           </figcaption>
         </figure>
         <figure class="flex flex-col items-center">
-          <img src="/public/Sandro.svg" alt="Sandro" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="../public/Sandro.svg" alt="Sandro" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="mt-4 text-left w-full pl-5">
             <h2 class="font-title text-2xl mb-2">SANDRO</h2>
             <p class="font-roboto text-sub mb-2">Pull col rond</p>
@@ -87,13 +87,13 @@
       </section>
       <section class="w-full grid grid-cols-2 md:grid-cols-4 gap-8 mb-12">
         <figure class="col-span-2 md:col-span-2 bg-border rounded-lg p-8 flex flex-col justify-center items-start">
-          <img src="/public/image1.svg" alt="Officewear" class="w-full h-64 object-cover rounded mb-4" />
+          <img src="../public/image1.svg" alt="Officewear" class="w-full h-64 object-cover rounded mb-4" />
           <h2 class="font-title text-2xl mb-2">OFFICEWEAR</h2>
           <p class="font-roboto mb-4">Incontournable à chaque rentrée, la tendance office Wear est de retour !</p>
           <a href="#" class="bg-black text-primary font-title rounded-full px-6 py-2">découvrir</a>
         </figure> 
         <figure class="flex flex-col items-center">
-          <img src="/public/Jacquemus.svg" alt="Jacquemus" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="../public/Jacquemus.svg" alt="Jacquemus" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col mt-25 text-left w-full pl-5">
           <h2 class="font-title text-2xl mb-2">JACQUEMUS</h2>
           <span class="text-sub font-roboto">Sweatshirt à capuche</span>
@@ -101,7 +101,7 @@
           </figcaption>
         </figure>
         <figure class="flex flex-col items-center ">
-          <img src="/public/Zadig.svg" alt="Zadig & Voltaire" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="../public/Zadig.svg" alt="Zadig & Voltaire" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col pl-5 mt-25 text-left w-full">
           <h2 class="font-title text-2xl mb-2">ZADIG & VOLTAIRE</h2>
           <span class="font-roboto text-sub">Sweatshirt à capuche</span>
@@ -185,18 +185,18 @@
           <ul class="flex flex-row gap-4">
            
             <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl " href="#"><img src="/public/Facebook.png" alt="Facebook" class="h-6 w-6" /></a>
+              <a class="bg-primary rounded-2xl " href="#"><img src="../public/Facebook.png" alt="Facebook" class="h-6 w-6" /></a>
             </li>
             <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl" href="#"><img src="/public/Instagram.png" alt="Instagram" class="h-6 w-6" /></a>
-            </li>
-
-            <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl" href="#"><img src="/public/pinterest-p.svg" alt="Pinterest" class="h-6 w-6" /></a>
+              <a class="bg-primary rounded-2xl" href="#"><img src="../public/Instagram.png" alt="Instagram" class="h-6 w-6" /></a>
             </li>
 
             <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl" href="#"><img src="/public/tiktok.svg" alt="TikTok" class="h-6 w-6" /></a>
+              <a class="bg-primary rounded-2xl" href="#"><img src="../public/pinterest-p.svg" alt="Pinterest" class="h-6 w-6" /></a>
+            </li>
+
+            <li class="flex flex-col items-center">
+              <a class="bg-primary rounded-2xl" href="#"><img src="../public/tiktok.svg" alt="TikTok" class="h-6 w-6" /></a>
             </li>
             
           </ul>
