--- a/pages/index-5.html
+++ b/pages/index-5.html
@@ -10,8 +10,8 @@
   <body class="flex min-h-screen flex-col items-center">
     <header class="flex w-full flex-row items-center justify-between px-8 py-4">
       <section class="flex items-center">
-        <a href="/pages/index-3.html">
-          <img class="h-12" src="/public/Logo_galeries_lafayette-removebg-preview 1.png" alt="Logo" />
+        <a href="./index-3.html">
+          <img class="h-12" src="../public/Logo_galeries_lafayette-removebg-preview 1.png" alt="Logo" />
         </a>
         <nav class="ml-8">
           <ul class="flex flex-row space-x-6">
@@ -24,23 +24,23 @@
       <aside class="flex items-center space-x-4">
         <form class="bg-primary border-sub flex items-center rounded border px-2 py-1">
           <input class="bg-primary font-roboto max-w-fit outline-none" type="text" placeholder="Marques, catégories, articles..." />
-          <button type="submit"><img class="ml-2 h-5" src="/public/search.png" alt="Rechercher" /></button>
+          <button type="submit"><img class="ml-2 h-5" src="../public/search.png" alt="Rechercher" /></button>
         </form>
-        <button aria-label="Profil"><img class="h-6" src="/public/profile.png" alt="Profil" /></button>
-        <button aria-label="Panier"><img class="h-6" src="/public/cart.png" alt="Panier" /></button>
+        <button aria-label="Profil"><img class="h-6" src="../public/profile.png" alt="Profil" /></button>
+        <button aria-label="Panier"><img class="h-6" src="../public/cart.png" alt="Panier" /></button>
       </aside>
     </header>
 
     <main class="mx-auto mt-12 flex w-full max-w-7xl flex-col items-center">
       <nav class="w-full mb-8 flex items-center">
-        <a href="/pages/index-4.html" class="flex items-center text-black font-roboto text-lg hover:text-sub rounded px-2 transition-colors duration-150"><span class="text-2xl mr-2">&#8592;</span> Retour</a>
+        <a href="./index-4.html" class="flex items-center text-black font-roboto text-lg hover:text-sub rounded px-2 transition-colors duration-150"><span class="text-2xl mr-2">&#8592;</span> Retour</a>
       </nav>
 
       <h1 class="font-title text-6xl font-bold mb-12">CHAUSSURES HOMME</h1>
 
       <section class="w-full grid grid-cols-2 md:grid-cols-4 gap-8 mb-12">
         <figure class="flex flex-col items-center">
-          <img src="/public/Lanvin.svg" alt="Shoe 1" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="../public/Lanvin.svg" alt="Shoe 1" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col mt-25 text-left w-full pl-5">
           <h2 class="font-title text-2xl mb-2">LANVIN</h2>
           <span class="text-sub font-roboto">Sneakers Curb</span>
@@ -48,7 +48,7 @@
           </figcaption>
         </figure>
         <figure class="flex flex-col items-center">
-          <img src="/public/NB.svg" alt="Shoe 2" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="../public/NB.svg" alt="Shoe 2" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col mt-25 text-left w-full pl-5">
           <h2 class="font-title text-2xl mb-2">NEW BALANCE</h2>
           <span class="text-sub font-roboto">740</span>
@@ -56,7 +56,7 @@
           </figcaption>
         </figure>
         <figure class="flex flex-col items-center">
-          <img src="/public/GoldenGoose-1.svg" alt="Shoe 3" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="../public/GoldenGoose-1.svg" alt="Shoe 3" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col mt-25 text-left w-full pl-5">
           <h2 class="font-title text-2xl mb-2">GOLDEN GOOSE</h2>
           <span class="text-sub font-roboto">Baskets basses Super Stan en cuir</span>
@@ -64,7 +64,7 @@
           </figcaption>
         </figure>
         <figure class="flex flex-col items-center">
-          <img src="/public/GoldenGoose-2.svg" alt="Shoe 4" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="../public/GoldenGoose-2.svg" alt="Shoe 4" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col mt-25 text-left w-full pl-5">
           <h2 class="font-title text-2xl mb-2">GOLDEN GOOSE</h2>
           <span class="text-sub font-roboto">Baskets basses Super Stan en cuir</span>
@@ -75,13 +75,13 @@
 
       <section class="w-full grid grid-cols-2 md:grid-cols-4 gap-8 mb-12">
         <figure class="col-span-2 md:col-span-2 bg-ele-alt rounded-lg p-8 flex flex-col justify-center items-start">
-          <img src="/public/Jean.svg" alt="Officewear" class="w-full h-64 object-cover rounded mb-4" />
+          <img src="../public/Jean.svg" alt="Officewear" class="w-full h-64 object-cover rounded mb-4" />
           <h2 class="font-title text-primary text-2xl mb-2">OFFICEWEAR</h2>
           <p class="font-roboto text-primary mb-4">Incontournable à chaque rentrée, la tendance office Wear est de retour !</p>
           <a href="#" class="bg-primary text-black font-title rounded-full px-6 py-2">découvrir</a>
         </figure> 
         <figure class="flex flex-col items-center">
-          <img src="/public/Clarks-1.svg" alt="Clarks-1" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="../public/Clarks-1.svg" alt="Clarks-1" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col mt-25 text-left w-full pl-5">
           <h2 class="font-title text-2xl mb-2">CLARKS</h2>
           <span class="text-sub font-roboto">Wallabee</span>
@@ -89,7 +89,7 @@
           </figcaption>
         </figure>
         <figure class="flex flex-col items-center ">
-          <img src="/public/Clarks-2.svg" alt="Clarks-2" class="w-80 h-80 object-contain bg-border rounded" />
+          <img src="../public/Clarks-2.svg" alt="Clarks-2" class="w-80 h-80 object-contain bg-border rounded" />
           <figcaption class="flex flex-col pl-5 mt-25 text-left w-full">
           <h2 class="font-title text-2xl mb-2">CLARKS</h2>
           <span class="font-roboto text-sub">Wallabee en cuir</span>
@@ -175,18 +175,18 @@
           <ul class="flex flex-row gap-4">
            
             <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl " href="#"><img src="/public/Facebook.png" alt="Facebook" class="h-6 w-6" /></a>
+              <a class="bg-primary rounded-2xl " href="#"><img src="../public/Facebook.png" alt="Facebook" class="h-6 w-6" /></a>
             </li>
             <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl" href="#"><img src="/public/Instagram.png" alt="Instagram" class="h-6 w-6" /></a>
-            </li>
-
-            <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl" href="#"><img src="/public/pinterest-p.svg" alt="Pinterest" class="h-6 w-6" /></a>
+              <a class="bg-primary rounded-2xl" href="#"><img src="../public/Instagram.png" alt="Instagram" class="h-6 w-6" /></a>
             </li>
 
             <li class="flex flex-col items-center">
-              <a class="bg-primary rounded-2xl" href="#"><img src="/public/tiktok.svg" alt="TikTok" class="h-6 w-6" /></a>
+              <a class="bg-primary rounded-2xl" href="#"><img src="../public/pinterest-p.svg" alt="Pinterest" class="h-6 w-6" /></a>
+            </li>
+
+            <li class="flex flex-col items-center">
+              <a class="bg-primary rounded-2xl" href="#"><img src="../public/tiktok.svg" alt="TikTok" class="h-6 w-6" /></a>
             </li>
             
           </ul>
