Fix CSS links: convert absolute CSS paths to relative paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
-    <link href="/src/style.css" rel="stylesheet" />
+    <link href="./src/style.css" rel="stylesheet" />
     <title>Click & Collect - Galeries Lafayette</title>
   </head>
   <body class="flex min-h-screen flex-col items-center">
