--- a/pages/index-6-Femme.html
+++ b/pages/index-6-Femme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
-    <link href="/src/style.css" rel="stylesheet" />
+    <link href="../src/style.css" rel="stylesheet" />
     <title>Chaussures Femme - Galeries Lafayette</title>
   </head>
   <body class="flex min-h-screen flex-col items-center">
